--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 GCCLIB Change LOG
 =================
 
+0.7.2 - 1 Mar 2020
+F0002 - (issue 5) __FSTAT signature update in Headers (comments only)
+        (issue 6) Fix arguments getting mangled from previous runs
+
 0.7.1 - 21 Feb 2020
 F0001 - Automated Build and Install
 
