--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 GCCLIB Change LOG
 =================
 
+F0010 - Assembler versions of memset, memcpy, memmove
 F0009 - Dynamic Stack - longjmp friendly, i.e. needs
         to clear up orphaned allocated stack bins when LESSSTAK
         is called. This keeps longjmp fast, stops memory leaks
