--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 GCCLIB Change LOG
 =================
 
+F0011 - Signal and raise to RESLIB
+        Make abort() raise abort signal
+        Default abort signal handler now aborts program
 F0010 - Assembler versions of memset, memcpy, memmove
 F0009 - Dynamic Stack - longjmp friendly, i.e. needs
         to clear up orphaned allocated stack bins when LESSSTAK
