--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 GCCLIB Change LOG
 =================
 
+0.7.8 - 5 May 2020
+F0015 - Calltype 11 (CMS_CONSOLE) Emulation
+        Build with optimiser (-O3)
 F0014 - Workaround for memory error in stdio; __wrterm added in cmsrtstb.c
         which seemed to clear/reset stdout for subsequent RESLIB runs
         Clean MORECORE comments *only* from cmssysc.c
