--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,13 @@
 GCCLIB Change LOG
 =================
+
 0.7.15- 25 July 2020
-F0032 - Remove EPLIST Magic Marker Hack! True fix by HRC402DS CMS Mod
+F0033 - Include Option for Alternative Stub Build (thanks Bob Bolch)
+        See top of MKGCCLIB EXEC and KKGCCMAC EXEC for opton
+      - Changed YATA option to read directly from READER. The archive had
+        too many records for the file system (an OMG moment!), it shows off the 
+        new gcclib unix like stream handling, READER is just like any file :-)
+F0032 - Remove EPLIST Magic Marker Hack! True fix done by HRC402DS CMS Mod
       - Move to builder tag image for builds
       - Added Argument Test
 
