--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 GCCLIB Change LOG
 =================
 
-0.7.17-  August 2020
+0.7.17- 11 August 2020
 F0038 - Add support for being called via a type 5 call
       - Assist to turn main() return int into a calltype 5 return EVALBLOK string
       - Functions to set return evalblok
