--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 GCCLIB Change LOG
 =================
 
+F0044 - Fix for __ZONE when HRC700DK not installed
 F0043 - Fix for Calltype 5 allocation (double word not fullword)
       - cmssys.assemble
         __STACKN entry point to call the SENTRIES command provided by HRC406DS
