--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,14 @@
 GCCLIB Change LOG
 =================
 
+
+F0045 - Theme - make calltype 5 handle binary data
+      - Implement CMSreturndata()
+      - Change CMSfunction calltype family of functions to return the returned data length
+        on success
+      - Updated tests
+      - Updated local build script (cp2vm370.sh) for MacOS/Linux
+
 0.8.0-  4 Oct 2020
 F0044 - Fix for __ZONE when HRC700DK not installed
 F0043 - Fix for Calltype 5 allocation (double word not fullword)
