--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 GCCLIB Change LOG
 =================
 
+0.8.1 - 26 Nov 2020
 F0046 - FIX - fwrite() crashed when size or count are zero
       - Implemented CMSfunctionDataArray() for binary arguments for calltype 5 calls
 F0045 - Theme - make calltype 5 handle binary data
