--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 GCCLIB Change LOG
 =================
 
+F0048 - Code reformatting
+        Added -D__CMS__ to CMAKE so that the right #ifdefs work including code
+        reformatting
 F0047 - Code reformatting
         Added fake CMAKE so the IDEs can show code errors/warnings
         Local Build - Stop MSYS2 rewriting directory paths in the docker container
