--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 GCCLIB Change LOG
 =================
 
+F0049 - EPLIST Parsing Error
+
 0.8.2 - 15 Dec 2020
 F0048 - Code reformatting
         Added -D__CMS__ to CMAKE so that the right #ifdefs work including code
