--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 GCCLIB Change LOG
 =================
 
+0.8.5 - 14 Mar 2021
 F0052 - Renamed the new CMSdebug() to CMSsetdebug() to avoid the duplicate!
 
 0.8.4 - 14 Mar 2021
